Fix stylesheet in realtime tests
The stylesheet was preventing the "echo" test from working correctly.  WS messages were sent/received correctly, but the results could not be displayed because the container size was too small.  This patch allows the containers to grow, and display WS results correctly.

--- a/test/realtime/static/stylesheet.css
+++ b/test/realtime/static/stylesheet.css
@@ -136,6 +136,10 @@ body {
 	padding:8px!important;
 }
 
+.container.elastic {
+	height:auto!important;
+}
+
 /***************************
  * TAB STYLES
  ***************************/
